--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.lab2d19it014">
-
     <application
         android:allowBackup="true"
         android:icon="@drawable/avi"
@@ -19,14 +18,16 @@
             android:name=".Aboutus"
             android:exported="false" />
         <activity
+            android:name=".setAlarm"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <receiver android:name=".NotificationPublisher"></receiver>
     </application>
-
 </manifest>
